# SocialNetworkClient

./: CMakeLists.txt  makefile
include/: Encoder.h  connectionHandler.h  decoder.h  encoder.h  encoderDecoder.h
src/: Encoder.cpp  connectionHandler.cpp  decoder.cpp  echoClient.cpp  encoder.cpp  encoderDecoder.cpp
